<resources>
    <string name="app_name">BibliotecaMovil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="titulo">Titulo</string>
    <string name="secondary_text">texto secundario</string>
    <string name="supporting_text">texto soporte</string>
    <string name="action_1">accion 1</string>
    <string name="action_2">accion 2</string>
    <string name="description">Descripcion</string>
    <string name="actuales_best_seller">ACTUALES BEST SELLER</string>
    <string name="snackError">Ocurrio un error</string>
    <string name="actionText">RETRY</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="f_publicacion">Fecha de publicacion</string>
    <string name="editorial">Editorial</string>
    <string name="author">Author</string>
    <string name="origen">Origen</string>
    <string name="betseller">Bet seller</string>
    <string name="favourite">Favourite</string>
    <string name="infoApp">Info App</string>
    <string name="txtRetry">Retry</string>
    <string name="errorOpenMeli">No se pudo abrir Mercado Libre</string>
    <string name="buyInMeli">Comprar en Mercado Libre</string>
    <string name="pesos">$</string>
    <string name="searchMeli">Busqueda en Mercado Libre</string>
    <string name="image">Image</string>
    <string name="exampleSynopsis">Un viaje al interior de las mentes del dúo ganador del premio GRAMMY Twenty One Pilots, con la épica celebración del lanzamiento del álbum Scaled And Icyde 2021, que llegará a los cines de todo el mundo el 19 de mayo, con reposiciones en salas exclusivas el 22 de mayo. Vuelve a disfrutar de la psicodélica reinvención del cine y la actuación en vivo, pero esta vez a gran escala. Con el sonido y video remasterizados para la gran pantalla, y con material inédito, la Experiencia cinematográfica deTwenty One Pilotste sumerge en el catálogo y la imaginación eclécticos de uno de los artistas más creativos de la música</string>
    <string name="precio">Precio</string>


</resources>