<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_top_bottom">

    <View
        android:id="@+id/end_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="shared_element_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_top_bottom"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dDetail"
        android:layout_width="wrap_content"
        android:layout_height="647dp"
        android:layout_gravity="center"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_marginBottom="400dp"
            android:contentDescription="@string/image"
            android:src="@drawable/books"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtTitleDetail"
            style="@style/titleStyle"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:lines="2"
            android:text="@string/title"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />


        <TextView
            android:id="@+id/txtKindDetail"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:maxWidth="230dp"
            android:maxHeight="25dp"
            android:text="@string/origen"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleDetail"
            app:layout_constraintVertical_bias="0.148" />

        <TextView
            android:id="@+id/txtAuthorDetail"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:maxWidth="230dp"
            android:maxHeight="25dp"
            android:text="@string/author"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtKindDetail"
            app:layout_constraintVertical_bias="0.227" />

        <TextView
            android:id="@+id/txtEditDetail"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:maxWidth="230dp"
            android:maxHeight="25dp"
            android:text="@string/editorial"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtAuthorDetail"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/sinopsis"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="36dp"
            android:text="@string/sinopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEditDetail" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="372dp"
            android:layout_height="210dp"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/sinopsis"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="5dp">

            <TextView
                android:id="@+id/txtSynopsisDetail"
                android:layout_width="363dp"
                android:layout_height="350dp"
                android:text="@string/exampleSynopsis"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFechaPublicacionDetail"
                app:layout_constraintVertical_bias="0.743" />
        </ScrollView>

        <ImageButton
            android:id="@+id/btnSelectFavourite"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/buttonML"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="128dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="7dp"
            app:cardElevation="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="41dp"
                android:background="@drawable/icon_meli"
                android:contentDescription="@string/image" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>








