<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:layout_margin="20dp"
    card_view:cardElevation="8dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/corner"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/textPrice"
            android:layout_width="170dp"
            android:layout_height="35dp"
            android:maxWidth="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pesos"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            style="@style/titleStyle"
            />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                style="@style/titleStyle"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tittleArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="85dp"
            android:maxWidth="210dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/titulo"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textPrice"/>

        <ImageView
            android:id="@+id/imageArticle"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

<Button
    android:id="@+id/button_art"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    />
</androidx.cardview.widget.CardView>
</layout>